cleaned up top module and made new clock circuit

--- a/Falling Blocks/db/falling_blocks.lpc.html
+++ b/Falling Blocks/db/falling_blocks.lpc.html
@@ -80,6 +80,22 @@
 <TD >0</TD>
 </TR>
 <TR >
+<TD >clk_gen</TD>
+<TD >2</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >3</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >image_gen|rand_u1</TD>
 <TD >35</TD>
 <TD >33</TD>
